[gd_scene load_steps=6 format=3 uid="uid://dishwash_minigame"]

[ext_resource type="Script" path="res://level1/dishwash_minigame.gd" id="1_dishwash"]
[ext_resource type="Texture2D" uid="uid://mug_dirty" path="res://level1/icons/mug-dirty.png" id="2_mug_dirty"]
[ext_resource type="Texture2D" uid="uid://mug_clean" path="res://level1/icons/mug-clean.png" id="3_mug_clean"]
[ext_resource type="Texture2D" uid="uid://drying_rack" path="res://level1/icons/drying-rack.png" id="4_drying_rack"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dirty_stack"]
size = Vector2(120, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_basin"]
size = Vector2(450, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rack"]
size = Vector2(120, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mug"]
size = Vector2(40, 50)

[node name="DishwashMinigame" type="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dishwash")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1.0, 0.5, 0.0, 0.2)

[node name="DirtyStack" type="Area2D" parent="."]
# Position set dynamically in _position_elements()

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirtyStack"]
shape = SubResource("RectangleShape2D_dirty_stack")

[node name="StackVisual" type="HBoxContainer" parent="DirtyStack"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -30.0
offset_right = 60.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mug1" type="Sprite2D" parent="DirtyStack/StackVisual"]
texture = ExtResource("2_mug_dirty")
scale = Vector2(0.25, 0.25)

[node name="Mug2" type="Sprite2D" parent="DirtyStack/StackVisual"]
position = Vector2(20, 0)
texture = ExtResource("2_mug_dirty")
scale = Vector2(0.25, 0.25)

[node name="Mug3" type="Sprite2D" parent="DirtyStack/StackVisual"]
position = Vector2(40, 0)
texture = ExtResource("2_mug_dirty")
scale = Vector2(0.25, 0.25)

[node name="StackLabel" type="Label" parent="DirtyStack"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 45.0
offset_right = 40.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 0
text = "Dirty Mugs"
horizontal_alignment = 1

[node name="Basin" type="Area2D" parent="."]
# Position set dynamically in _position_elements()

[node name="CollisionShape2D" type="CollisionShape2D" parent="Basin"]
shape = SubResource("RectangleShape2D_basin")

[node name="WaterVisual" type="ColorRect" parent="Basin"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -75.0
offset_right = 225.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.3, 0.2, 0.6)

[node name="WaterParticles" type="CPUParticles2D" parent="Basin"]
emitting = false
amount = 20
lifetime = 0.5
explosiveness = 0.3
emission_shape = 2
emission_rect_extents = Vector2(200, 5)
direction = Vector2(0, -1)
spread = 45.0
gravity = Vector2(0, 200)
initial_velocity_min = 30.0
initial_velocity_max = 80.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.4, 0.3, 0.2, 0.6)

[node name="BasinLabel" type="Label" parent="Basin"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 55.0
offset_right = 40.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
text = "Basin"
horizontal_alignment = 1

[node name="DryingRack" type="Area2D" parent="."]
# Position set dynamically in _position_elements()

[node name="CollisionShape2D" type="CollisionShape2D" parent="DryingRack"]
shape = SubResource("RectangleShape2D_rack")

[node name="RackSprite" type="Sprite2D" parent="DryingRack"]
texture = ExtResource("4_drying_rack")
scale = Vector2(0.3, 0.3)

[node name="RackLabel" type="Label" parent="DryingRack"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 55.0
offset_right = 50.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
text = "Drying Rack"
horizontal_alignment = 1

[node name="BoundMug" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundMug"]
shape = SubResource("RectangleShape2D_mug")

[node name="MugSprite" type="Sprite2D" parent="BoundMug"]
texture = ExtResource("2_mug_dirty")
scale = Vector2(0.3, 0.3)

[node name="ErrorNotification" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 230.0
grow_horizontal = 2
text = "Error message"
horizontal_alignment = 1

